--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         </activity>
 
         <activity
+            android:name=".MsgActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name="com.fengfz.bmc.start.StartActivity"
             android:screenOrientation="portrait">
             <intent-filter>
