--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,9 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#系统目标参数
+MIN_SDK_VERSION=14
+TARGET_SDK_VERSION=26
+COMPILE_SDK_VERSION=28
+BUILD_TOOLS_VERSION=28.0.3
+SUPPORT_VERSION=28.+
